# manifold-visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
python/: bezier_shapes.py  draw.py  knob.py  misc.py  mode.py  path.py  scene.py  scenes.py  viewer.py
python/modes/: manifold_exploration.py  raytracing.py  slide_constraint_comparison.py  slide_constraints_hv.py  slide_mnee.py  slide_offset_walks.py  slide_pool.py  slide_sms.py  specular_manifold_sampling.py  trace_ray.py
src/: bbox.h  ddistr.h  global.h  interaction.cpp  interaction.h  main.cpp  ray.h  scene.cpp  scene.h  shape.cpp  shape.h
src/python/: interaction.cpp  python.cpp  python.h  ray.cpp  scene.cpp  shape.cpp
src/shapes/: bezier_curve.h  circle.h  circle_segment.h  concave_segment.h  convex_segment.h  linear_segment.h
